# rhine-life-lab

./: .env.example  .gitignore  00_overview_blueprint.md  01_frontend_ui_blueprint.md  02_backend_implementation_blueprint.md  03_data_contracts_and_schemas.md  04_vibe_coding_implementation_plan.md  05_review_checklist.md  AGENTS.md  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: advanced.py  app_settings.py  card_library.py  chat.py  chat_sessions.py  deps.py  diagnostics.py  executor_profiles.py  files.py  library.py  manager_auto.py  manager_tools.py  project_events.py  projects.py  report.py  results.py  runs.py  workspace_roots.py
backend/app/core/: config.py  paths.py
backend/app/models/: api.py  artifacts.py  background.py  cards.py  (+14 more)
backend/blueprint_re_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_argv_templates.py  test_auto_command_interception.py  test_auto_episode_flow.py  test_card_library.py  test_chat_upload_remediation.py  test_dependency_attention.py  test_executor_profiles.py  test_fuel_buffer.py  test_install_deploy.py  test_library_registry.py  test_manager_flow.py  test_parallel_run_concurrency.py  test_pi_launch_script.py  test_project_directory_workspace.py  test_project_event_service.py  test_project_snapshot_split.py  test_projects_capability_upload.py  test_review_2025_05_26_remediation.py  test_runtime_dependency_integration.py  test_runtime_dependency_resolver.py  test_runtime_dependency_resolver_integration.py  test_runtime_dependency_state.py  test_wake_loop.py
(+243 files in other folders)
