[project]
name = "blueprint-re-backend"
version = "0.4.1"
description = "Git-native bioinformatics project manager"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "orjson>=3.10.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["app.tests*", "tests*"]

[tool.setuptools.package-data]
"app" = ["schemas/*.json"]
